Network: Cellular: Provide IPConfigs for external devices

Shill may not provide IPConfigs for external Cellular devices
(i.e. dongles), so we need to build a dictionary of ipv4 properties
from cached properties in NetworkState (crbug.com/739314) so that
the UI can display them.

Bug: 739314
Change-Id: Ic66654795e5062ff10d52121ef6c0bca3fc8868b